--- a/index.html
+++ b/index.html
@@ -27,5 +27,6 @@
   </script>
   <!-- Docsify v4 -->
   <script src="//cdn.jsdelivr.net/npm/docsify@4"></script>
+  <script src="docsify-copy-code.min.js"></script>
 </body>
 </html>
